--- a/src/components/ContentHome/ContentHome.module.scss
+++ b/src/components/ContentHome/ContentHome.module.scss
@@ -74,3 +74,45 @@
         line-height: 150%;
     }
 }
+
+.contacts {
+    padding: 45px 60px;
+    color: #ffffff;
+
+    .head-text {
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 45px;
+    }
+
+    .about-text {
+        font-size: 20px;
+        font-weight: 400;
+        max-width: 800px;
+        margin: 0 auto;
+        text-align: center;
+        line-height: 150%;
+        margin-bottom: 55px;
+    }
+
+    .contact-text {
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    .contact-link {
+        margin-left: 30px;
+        font-size: 20px;
+    }
+
+    .contact-link > *:not(:last-child){
+        margin-bottom: 25px;
+    }
+
+    .contact-link > *:not(:first-child) {
+        span {
+            color: #dedede;
+        }
+        
+    }
+}
