--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -13,13 +13,8 @@
         background-color: white;
     }
 
-    .form-group {
-        position: relative;
-    }
-
     .auth-form-content {
         padding: 0 20px;
-        position: relative;
     }
 
     .auth-form-title {
@@ -31,34 +26,32 @@
     }
 
     label {
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 600;
         color: rgb(34, 34, 34);
     }
 
-    .input-pass {
-        position: relative;
-        height: 45px;
-        width: 100%;
-        border: none;
-        border-radius: 9px;
-        border: 1px solid #e0e3e9;
-        padding: 0 10px;
+    input {
+        flex: none;
+        padding: 10px;
+        font-size: 16px;
+        border: 1px solid #ebebeb;
+        border-radius: 8px;
+        outline: 0;
+        margin: 20px 0;
+    }
+
+    input:focus {
+        outline: 1px solid #3742C9;
+    }
+
+    .btn-show {
+        max-width: 200px;
+        padding: 10px;
+        border-radius: 10px;
+        margin-bottom: 15px;
         outline: 0;
     }
 
-    .input-pass .fa-eye-slash {
-        position: absolute;
-        right: 10px;
-        top: 15px;
-        font-size: 15px;
-        cursor: pointer;
-    }
-    .fa-eye {
-        position: absolute;
-        right: 10px;
-        top: 15px;
-        font-size: 15px;
-        cursor: pointer;
-    }
+    
 }
