--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -53,5 +53,27 @@
         outline: 0;
     }
 
+    .error-style {
+        color: red;
+        font-size: 12px;
+        margin: -10px 0 10px 0;
+    }
+    .error-input {
+        border: 1px solid red;
+
+        :focus {
+            outline: 1px solid red;
+        }
+    }
+
+    .error {
+        color: red;
+        font-size: 12px;
+        font-weight: bold;
+        text-align: center;
+        margin-top: 10px;
+
+    }
+
     
 }
