--- a/src/pages/SendUnits/SendUnits.module.scss
+++ b/src/pages/SendUnits/SendUnits.module.scss
@@ -11,6 +11,7 @@
         background: #fff;
         max-width: 400px;
         border-radius: 15px;
+        margin-top: 50px;
         box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
     }
     input {
