--- a/src/pages/SendUnits/SendUnits.module.scss
+++ b/src/pages/SendUnits/SendUnits.module.scss
@@ -13,6 +13,7 @@
         border-radius: 15px;
         margin-top: 50px;
         box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+        margin-bottom: 25px;
 
     }
     input:disabled {
