--- a/src/pages/UserCabinet/UserCabinet.module.scss
+++ b/src/pages/UserCabinet/UserCabinet.module.scss
@@ -8,9 +8,22 @@
     }
 
     .cab-body {
-        font-size: 16px;
+        font-size: 18px;
         color: white;
         margin-bottom: 15px;
 
+    }
+    .sumunits-badge {
+        max-width: 200px;
+        text-align: center;
+        padding: 20px 20px;
+        height: 200px;
+        background: #fff;
+        font-size: 24px;
+        border-radius: 15px;
+
+        p {
+            font-size: 16px;
+        }
     }
 }
