--- a/src/pages/UserCabinet/UserCabinet.module.scss
+++ b/src/pages/UserCabinet/UserCabinet.module.scss
@@ -21,6 +21,7 @@
         background: #fff;
         font-size: 24px;
         border-radius: 15px;
+        margin-bottom: 10px;
 
         p {
             font-size: 16px;
